# appdev2-finalproject

./: .gitignore
api/: .coverage  .env  .gitignore  .python-version  factories.py  output.dot  pyproject.toml  setup.cfg
api/.mypy_cache/3.10/: @plugins_snapshot.json  __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _markupbase.data.json  (+185 more)
api/config/: settings.py  urls.py
api/htmlcov/: d_130fa262a10c850a___init___py.html  d_130fa262a10c850a_admin_py.html  d_130fa262a10c850a_apps_py.html  d_130fa262a10c850a_models_py.html  d_130fa262a10c850a_views_py.html  d_1be55dd1ebe36544___init___py.html  d_1f3ae8387eaa6e3e___init___py.html  d_1f3ae8387eaa6e3e_admin_py.html  d_1f3ae8387eaa6e3e_apps_py.html  d_1f3ae8387eaa6e3e_forms_py.html  d_1f3ae8387eaa6e3e_models_py.html  d_1f3ae8387eaa6e3e_serializers_py.html  d_1f3ae8387eaa6e3e_signals_py.html  d_1f3ae8387eaa6e3e_urls_py.html  d_1f3ae8387eaa6e3e_views_py.html  d_2c3cc51e7166d768___init___py.html  d_2c3cc51e7166d768_admin_py.html  d_2c3cc51e7166d768_apps_py.html  d_2c3cc51e7166d768_models_py.html  d_2c3cc51e7166d768_serializers_py.html  d_2c3cc51e7166d768_urls_py.html  d_2c3cc51e7166d768_views_py.html  d_5fa9b111d6de7c9f___init___py.html  d_5fa9b111d6de7c9f_admin_py.html  d_5fa9b111d6de7c9f_apps_py.html  d_5fa9b111d6de7c9f_models_py.html  d_5fa9b111d6de7c9f_serializers_py.html  d_5fa9b111d6de7c9f_signal_py.html  d_5fa9b111d6de7c9f_signals_py.html  d_5fa9b111d6de7c9f_urls_py.html  d_5fa9b111d6de7c9f_views_py.html  d_729a89c3c1180efe___init___py.html  d_729a89c3c1180efe_admin_py.html  d_729a89c3c1180efe_apps_py.html  d_729a89c3c1180efe_models_py.html  d_729a89c3c1180efe_serializers_py.html  d_729a89c3c1180efe_urls_py.html  d_729a89c3c1180efe_views_py.html  d_9537015eea9e6f45___init___py.html  d_9537015eea9e6f45_admin_py.html  (+16 more)
(+1189 files in other folders)
